@@ -1,4 +1,3 @@
-Properties
 bin
 obj
 
